--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTIONSTRING = "mongodb+srv://Augustin:1Oe1yXHPLf4rIbMD@cluster0.jr5lys3.mongodb.net/?retryWrites=true&w=majority"
+AUTH_KEY = "fefezfzef45zef4ze5"
